--- a/src/app/bmx/bmx-creator/project-information/project-information.component.html
+++ b/src/app/bmx/bmx-creator/project-information/project-information.component.html
@@ -33,12 +33,12 @@
                 </mat-form-field>
 
             </div>
-
             <div class="row-field">
                 <label class="selectLabels">Project</label>
                 <mat-form-field appearance="outline">
                     <mat-label>Enter Project Name</mat-label>
                     <input type="text" matInput formControlName="bmxProjectName">
+                    <p *ngIf="bmxProjectName.invalid && bmxProjectName.dirty">Project Name is required only A-Z, a-z, 0-9 allowed</p>
                 </mat-form-field>
                 <label class="selectLabels">Region</label>
                 <mat-form-field appearance="outline">
@@ -57,6 +57,7 @@
                 <mat-form-field appearance="outline">
                     <mat-label>Enter Company</mat-label>
                     <input type="text" matInput formControlName="bmxCompany">
+                    <p *ngIf="bmxCompany.invalid && bmxCompany.dirty">Company is required only A-Z, a-z, 0-9 allowed</p>
                 </mat-form-field>
                 <label class="selectLabels">Language</label>
                 <mat-form-field appearance="outline">
@@ -140,10 +141,10 @@
                 <div class="optionButton">
                     <div *ngIf="canEdit !== i; else elseBlock">
                         <button mat-icon-button style="position: absolute; top: 9px; right: 5px;color: #053074;"
-                            (click)="editDirector(i)" >
+                            (click)="editDirector(i)">
                             <mat-icon>edit</mat-icon>
                         </button>
-    
+
                     </div>
                     <ng-template #elseBlock>
                         <button mat-icon-button style="position: absolute; top: 9px; right: 5px;color: #ee7f25;"
