--- a/src/app/bmx/bmx-creator/project-reports/project-reports.component.scss
+++ b/src/app/bmx/bmx-creator/project-reports/project-reports.component.scss
@@ -58,8 +58,19 @@
     color: #ee7f25;
 }
 .full-icon {
-    color: #0bd659;
-    font-size: 20px;
+    color: #324395;
+    font-size: 25px;
+    transition: all 0.1s ease-in-out;
+    text-shadow: 0 0.04em 0.04em rgba(0, 0, 0, 0.35);
+    box-shadow: inset inset 0px 0px 5px #0bd659;
+}
+.full-icon-secondary:hover {
+    transform: scale(2);
+    color: #324395;
+}
+.full-icon-secondary {
+    color: #ee7f25;
+    font-size: 25px;
     transition: all 0.1s ease-in-out;
     text-shadow: 0 0.04em 0.04em rgba(0, 0, 0, 0.35);
     box-shadow: inset inset 0px 0px 5px #0bd659;
