--- a/src/app/bmx/bmx-creator/project-reports/project-reports.component.html
+++ b/src/app/bmx/bmx-creator/project-reports/project-reports.component.html
@@ -1,6 +1,7 @@
 <div style="display: flex;">
-    <div style="flex-direction: column;" [ngClass]="(bmxClientPageDesignMode)?'bmx-page':'bmx-page-design'"  *ngIf="isMenuActive16" [dragula]="(isMobile)?'TASKS':''"
-        (dragulaModelChange)="checkDragEvetn($event);" [(dragulaModel)]="bmxPages[currentPage].page">
+    <div style="flex-direction: column;" [ngClass]="(bmxClientPageDesignMode)?'bmx-page':'bmx-page-design'"
+        *ngIf="isMenuActive16" [dragula]="(isMobile)?'TASKS':''" (dragulaModelChange)="checkDragEvetn($event);"
+        [(dragulaModel)]="bmxPages[currentPage].page">
 
 
         <!-- BRAND MATRIX MODULAR TEMPLATE COMPONENTS  🧑🏻‍🚀🧑🏻‍🚀🧑🏻‍🚀🧑🏻‍🚀🧑🏻‍🚀🧑🏻‍🚀🧑🏻‍🚀🧑🏻‍🚀🧑🏻‍🚀🧑🏻‍🚀🧑🏻‍🚀🧑🏻‍🚀🧑🏻‍🚀 -->
@@ -180,15 +181,20 @@
                 mat-icon-button color="warn" aria-label="aria">
                 <mat-icon class="full-icon">star_border</mat-icon>
             </button>
-            <!-- <button (click)="createNewBmxComponent('ranking-scale')" matTooltip="rank matrix" matTooltipPosition="right"
-                mat-icon-button color="warn" aria-label="aria">
-                <mat-icon class="full-icon">military_tech</mat-icon>
-            </button>
-            <button (click)="createNewBmxComponent('narrow-down')" matTooltip="narrow down matrix"
+            <button (click)="createNewBmxComponent('question-answer')" matTooltip="questions & answers"
                 matTooltipPosition="right" mat-icon-button color="warn" aria-label="aria">
-                <mat-icon class="full-icon">rule</mat-icon>
+                <mat-icon class="full-icon">question_answer</mat-icon>
             </button>
-            <button (click)="createNewBmxComponent('image-rate-scale')" matTooltip="image rate matrix"
+            <br>
+            <button (click)="createReportPerCategory()" matTooltip="overall ranking by test name"
+                matTooltipPosition="right" mat-icon-button color="warn" aria-label="aria">
+                <mat-icon class="full-icon">summarize</mat-icon>
+            </button>
+            <button (click)="createReportByUsername()" matTooltip="votes by respondent"
+                matTooltipPosition="right" mat-icon-button color="warn" aria-label="aria">
+                <mat-icon class="full-icon">person_outline</mat-icon>
+            </button>
+            <!-- <button (click)="createNewBmxComponent('image-rate-scale')" matTooltip="image rate matrix"
                 matTooltipPosition="right" mat-icon-button color="warn" aria-label="aria">
                 <mat-icon class="full-icon">image</mat-icon>
             </button>
@@ -196,13 +202,10 @@
                 mat-icon-button color="warn" aria-label="aria">
                 <mat-icon class="full-icon">local_fire_department</mat-icon>
             </button> -->
-            <button (click)="createNewBmxComponent('question-answer')" matTooltip="questions & answers"
-                matTooltipPosition="right" mat-icon-button color="warn" aria-label="aria">
-                <mat-icon class="full-icon">question_answer</mat-icon>
-            </button>
+
             <br>
-            <button *ngIf="!false" (dblclick)="createPage()" matTooltip="double click to create new page" matTooltipPosition="right"
-                mat-icon-button aria-label="aria">
+            <button *ngIf="!false" (dblclick)="createPage()" matTooltip="double click to create new page"
+                matTooltipPosition="right" mat-icon-button aria-label="aria">
                 <mat-icon class="full-icon-secondary">post_add</mat-icon>
             </button>
             <button *ngIf="!false" (dblclick)="deletePage()" matTooltip="double click to delete current page"
@@ -224,7 +227,7 @@
                 <mat-icon class="full-icon">cloud_upload
                 </mat-icon>
             </button>
-            <button *ngIf="true" (click)="print()" mat-icon-button >
+            <button *ngIf="true" (click)="print()" mat-icon-button>
                 <mat-icon class="full-icon">print
                 </mat-icon>
             </button>
@@ -291,5 +294,5 @@
     </div>
     <mat-icon (click)="isTemplateBoxOn = false" style="cursor: pointer;" class="full-icon">close
     </mat-icon>
-    
+
 </div>
