--- a/src/app/bmx/bmx-creator/bmx-creator.component.scss
+++ b/src/app/bmx/bmx-creator/bmx-creator.component.scss
@@ -35,6 +35,10 @@
     .no-print * {
         display: none !important;
     }
+
+    .break-page {
+        page-break-after: always;
+    }
 }
 //   BRAND MATRIX CREATOR DASH
 
@@ -123,14 +127,14 @@
 
     .full-icon:hover {
         transform: scale(2);
-        color: darkblue;
+        color: #ee7f25;
     }
     .full-icon {
-        color: grey;
-        font-size: 20px;
+        color: #324395;
+        font-size: 25px;
         transition: all 0.1s ease-in-out;
         text-shadow: 0 0.04em 0.04em rgba(0, 0, 0, 0.35);
-        box-shadow: inset inset 0px 0px 5px #c1c1c1;
+        box-shadow: inset inset 0px 0px 5px #0bd659;
     }
 
     .page-design::-webkit-scrollbar {
