--- a/src/app/bmx/bmx-creator/project-reports/templates/report-first-page/report-first-page.component.html
+++ b/src/app/bmx/bmx-creator/project-reports/templates/report-first-page/report-first-page.component.html
@@ -1,4 +1,5 @@
 <div>
+    <!-- LOGOS INFO -->
     <div style="display: flex;
     flex-direction: row;
     justify-content: space-around;">
@@ -8,10 +9,12 @@
         <img [width]="bmxItem.componentSettings[0].logoWidth" style="margin-top: 60px;cursor: pointer;"
             [src]="bmxItem.componentSettings[0].DSILogo">
     </div>
+
     <br>
     <br>
     <br>
     <br>
+    <!-- BI INFO -->
     <div style="display: flex; flex-direction: row; justify-content: space-around;">
         <div>
             <p style="font-weight: bold;"> Brand Institute, Inc.</p>
@@ -29,10 +32,12 @@
                     style="color: #ee7f25;">wjohnson@brandinstitute.com</span> </p>
         </div>
     </div>
+
     <br>
     <br>
     <br>
     <br>
+    <!-- PROJECT INFO -->
     <div style="width: 100%;height: 400px;background-color: white; 
     background-image: url('./assets/img/bmx/cover-graphic.jpg'); background-size: cover;display: flex;
     justify-content: center;align-items: center;text-align: center;">
@@ -41,12 +46,13 @@
         flex-direction: column;
         justify-content: space-around;">
 
-            <p style="color: white;font-size: 40px;font-weight: bold;">BRANDMATRIX <sup>TM</sup> REPORT</p>
+            <p style="color: white;font-size: 40px;font-weight: bold;">BRANDMATRIX <sup>TM</sup> REPORT</p><br>
             <p style="color: white;font-size: 30px;">PROJECT : <span>STARDUST</span></p>
 
         </div>
 
     </div>
+
     <br>
     <br>
     <br>
@@ -55,7 +61,8 @@
     <br>
     <br>
     <br>
-    <div  style="display: flex; flex-direction: row; justify-content: space-around;">
+    <!-- COMPANY INFO -->
+    <div style="display: flex; flex-direction: row; justify-content: space-around;">
         <div>
             <p>Prepared for: </p>
             <p><span style="font-weight: bold;">{{'CONTACT NAME'}}</span></p>
@@ -63,17 +70,23 @@
             <p><span style="font-weight: bold;">{{'COMPANYNAME'}}</span></p>
             <p>{{'ADDRESS INFORMATION'}}</p>
             <p><span style="font-weight: bold;">P</span> <span style="color: #ee7f25;"> 555-555-5555 </span>
-                <span style="font-weight: bold;">E</span> 
-                    FirstLastname@companyname.com
+                <span style="font-weight: bold;">E</span>
+                FirstLastname@companyname.com
             </p>
         </div>
         <div style="text-align: center;">
-            <img [width]="'100'" style="cursor: pointer;"
-                [src]="bmxItem.componentSettings[0].companyLogoURL"><br>
+            <img [width]="'100'" style="cursor: pointer;" [src]="bmxItem.componentSettings[0].companyLogoURL"><br>
             <p>Report Generated</p>
             <p><span style="font-weight: bold;">{{'11.22.21 '}}</span></p>
         </div>
     </div>
-   
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br> 
+    <br>
 </div>
-
