--- a/src/app/bmx/bmx-creator/survey-creation-design/templates/rating-scale/rating-scale.component.scss
+++ b/src/app/bmx/bmx-creator/survey-creation-design/templates/rating-scale/rating-scale.component.scss
@@ -98,6 +98,7 @@
 .blue {
   background-color: white;
   border-left: rgb(230, 230, 230) 1px solid;
+  border-right: rgb(231, 230, 230) 1px solid;// COMMENT IF YOU WANT SINGLE LINES
   border-top: rgb(231, 230, 230) 1px solid;
   padding: 20px;
   // margin: 5px;
