new filter report by user working progress

--- a/src/app/bmx/bmx-creator/project-reports/project-reports.component.html
+++ b/src/app/bmx/bmx-creator/project-reports/project-reports.component.html
@@ -225,6 +225,7 @@
                 matTooltipPosition="right">
                 <mat-icon class="full-icon">article</mat-icon>
             </button>
+            
             <button (click)="createNewBmxComponent('rate-scale')" matTooltip="insert table" matTooltipPosition="right"
                 mat-icon-button color="warn" aria-label="aria">
                 <mat-icon class="full-icon">star_border</mat-icon>
@@ -252,11 +253,11 @@
                 matTooltipPosition="right" mat-icon-button color="warn" aria-label="aria">
                 <mat-icon class="full-icon-secondary">title</mat-icon>
             </button>
-            <!-- <button (click)="createNewBmxComponent('image-rate-scale')" matTooltip="image rate matrix"
+            <button (click)="filterReport()" matTooltip="filter rpeort by users"
                 matTooltipPosition="right" mat-icon-button color="warn" aria-label="aria">
-                <mat-icon class="full-icon">image</mat-icon>
+                <mat-icon class="full-icon-secondary">filter_alt</mat-icon>
             </button>
-            <button (click)="createNewBmxComponent('tinder')" matTooltip="tinder matrix" matTooltipPosition="right"
+            <!-- <button (click)="createNewBmxComponent('tinder')" matTooltip="tinder matrix" matTooltipPosition="right"
                 mat-icon-button color="warn" aria-label="aria">
                 <mat-icon class="full-icon">local_fire_department</mat-icon>
             </button> -->
