--- a/src/app/bmx/bmx-creator/survey-creation-design/templates/image-rate-scale/image-rate-scale.component.scss
+++ b/src/app/bmx/bmx-creator/survey-creation-design/templates/image-rate-scale/image-rate-scale.component.scss
@@ -95,15 +95,16 @@
   border-left: rgb(231, 230, 230) 1px solid;
   border-right: rgb(231, 230, 230) 1px solid;
   border-top: rgb(231, 230, 230) 1px solid;
-  padding: 20px;
+  padding: 0px;
   // margin: 5px;
 }
 
 .blue {
   background-color: white;
   border-left: rgb(230, 230, 230) 1px solid;
+  border-right: rgb(231, 230, 230) 1px solid;// COMMENT IF YOU WANT SINGLE LINES
   border-top: rgb(231, 230, 230) 1px solid;
-  padding: 20px;
+  padding: 0px;
   // margin: 5px;
 }
 
