--- a/src/app/bmx/bmx-creator/survey-creation-design/templates/rank-scale/rank-scale.component.html
+++ b/src/app/bmx/bmx-creator/survey-creation-design/templates/rank-scale/rank-scale.component.html
@@ -10,40 +10,74 @@
     <div *ngIf="isColumnResizerOn && bmxClientPageOverview" class="" style="    display: flex;
     flex-direction: row;
     justify-content: start;background: #ffffffd9;
-    gap: 50px;position: absolute;left: -950px;z-index: 1;border: 2px dashed #324395;">
+    gap: 0px;position: absolute;left: -740px;z-index: 1;border: 2px dashed #324395;">
+        <!-- NAME CANDIATES -->
+        <div style="display: flex;flex-direction: column;align-items: center;">
+            <p style="margin: 0 0 -12px;color: #324395;">candidates 
+            </p>
+            <input type="range" style="margin: 20px;width: 50px;"
+                [(ngModel)]="bmxItem.componentSettings[0].nameCandidatesWidth" class="slider-font-size" tickInterval="0.5"
+                min="50" max="400" [value]="bmxItem.componentSettings[0].nameCandidatesWidth">
+        </div>
 
+        <!-- RATIONALE -->
         <div style="display: flex;flex-direction: column;align-items: center;">
-            <p style="margin: 0 0 -12px;color: #324395;">columns width: {{bmxItem.componentSettings[0].columnWidth}} px
+            <p style="margin: 0 0 -12px;color: #324395;">rationale
             </p>
-            <input type="range" style="margin: 20px;width: 100px;"
-                [(ngModel)]="bmxItem.componentSettings[0].columnWidth" class="slider-font-size" tickInterval="1"
-                min="50" max="1000" [value]="bmxItem.componentSettings[0].columnWidth">
+            <input type="range" style="margin: 20px;width: 50px;"
+                [(ngModel)]="bmxItem.componentSettings[0].rationalewidth" class="slider-font-size" tickInterval="0.5"
+                min="50" max="600" [value]="bmxItem.componentSettings[0].rationalewidth">
         </div>
+
+        <!-- RATE -->
         <div style="display: flex;flex-direction: column;align-items: center;">
-            <p style="margin: 0 0 -12px;color: #324395;">ratinale width: {{bmxItem.componentSettings[0].rationalewidth}}
-                px
+            <p style="margin: 0 0 -12px;color: #324395;">rank
             </p>
-            <input type="range" style="margin: 20px;width: 100px;"
-                [(ngModel)]="bmxItem.componentSettings[0].rationalewidth" class="slider-font-size" tickInterval="1"
-                min="50" max="1000" [value]="bmxItem.componentSettings[0].rationalewidth">
+            <input type="range" style="margin: 20px;width: 50px;" [(ngModel)]="bmxItem.componentSettings[0].rateWidth"
+                class="slider-font-size" tickInterval="0.5" min="50" max="400"
+                [value]="bmxItem.componentSettings[0].rateWidth">
         </div>
-        <div style="display: flex;flex-direction: column;align-items: center;">
-            <p style="margin: 0 0 -12px;color: #324395;">font size: {{bmxItem.componentSettings[0].fontSize}} px</p>
-            <input type="range" style="margin: 20px;width: 100px;" [(ngModel)]="bmxItem.componentSettings[0].fontSize"
-                class="slider-font-size" tickInterval="1" min="2" max="40"
-                [value]="bmxItem.componentSettings[0].fontSize">
+
+          <!-- COMMENTS -->
+          <div style="display: flex;flex-direction: column;align-items: center;">
+            <p style="margin: 0 0 -12px;color: #324395;">comments
+            </p>
+            <input type="range" style="margin: 20px;width: 50px;"
+                [(ngModel)]="bmxItem.componentSettings[0].commentsWidth" class="slider-font-size" tickInterval="0.5"
+                min="50" max="400" [value]="bmxItem.componentSettings[0].commentsWidth">
         </div>
+
+        <!-- REST OF THE COLUMNS -->
         <div style="display: flex;flex-direction: column;align-items: center;">
-            <p style="margin: 0 0 -12px;color: #324395;">row height: {{bmxItem.componentSettings[0].rowHeight}} px</p>
-            <input type="range" style="margin: 20px;width: 100px;" [(ngModel)]="bmxItem.componentSettings[0].rowHeight"
-                class="slider-font-size" tickInterval="1" min="2" max="20"
+            <p style="margin: 0 0 -12px;color: #324395;">other columns
+            </p>
+            <input type="range" style="margin: 20px;width: 50px;"
+                [(ngModel)]="bmxItem.componentSettings[0].columnWidth" class="slider-font-size" tickInterval="0.5"
+                min="50" max="400" [value]="bmxItem.componentSettings[0].columnWidth">
+        </div>
+
+        <!-- ROW HEIGHT -->
+     
+        <div style="display: flex;flex-direction: column;align-items: center;">
+            <p style="margin: 0 0 -12px;color: #324395;">row height</p>
+            <input type="range" style="margin: 20px;width: 60px;" [(ngModel)]="bmxItem.componentSettings[0].rowHeight"
+                class="slider-font-size" tickInterval="0.5" min="-10" max="20"
                 [value]="bmxItem.componentSettings[0].rowHeight">
         </div>
+
+        <!-- FONT -->
+        <div style="display: flex;flex-direction: column;align-items: center;">
+            <p style="margin: 0 0 -12px;color: #324395;">font size: {{bmxItem.componentSettings[0].fontSize}}</p>
+            <input type="range" style="margin: 20px;width: 50px;" [(ngModel)]="bmxItem.componentSettings[0].fontSize"
+                class="slider-font-size" tickInterval="0.1" min="2" max="40"
+                [value]="bmxItem.componentSettings[0].fontSize">
+        </div>
+        
+        <!-- RADIO -->
         <div *ngIf="radioColumnCounter > 1" style="display: flex;flex-direction: column;align-items: center;">
-            <p style="margin: 0 0 -12px;color: #324395;">radio Columns width:
-                {{bmxItem.componentSettings[0].radioColumnsWidth}} px</p>
-            <input type="range" style="margin: 20px;width: 100px;"
-                [(ngModel)]="bmxItem.componentSettings[0].radioColumnsWidth" class="slider-font-size" tickInterval="1"
+            <p style="margin: 0 0 -12px;color: #324395;">radio</p>
+            <input type="range" style="margin: 20px;width: 50px;"
+                [(ngModel)]="bmxItem.componentSettings[0].radioColumnsWidth" class="slider-font-size" tickInterval="0.5"
                 min="50" max="100" [value]="bmxItem.componentSettings[0].radioColumnsWidth">
         </div>
     </div>
@@ -56,19 +90,20 @@
             *ngIf="i === selectedIndex" mat-icon-button>
             <mat-icon style="font-size: 25px;" class="full-icon">check_circle</mat-icon>
         </button>
-        <button (click)="selectedIndex = i" class="add-column" matTooltip="edit table content & settings"
+        <button (click)="selectedIndex = i" class="add-column" matTooltip="insert test names"
             matTooltipPosition="above" *ngIf="i !== selectedIndex" mat-icon-button>
             <mat-icon style="font-size: 25px;" class="full-icon">edit</mat-icon>
         </button>
-        <button (click)="insertTextColumn()" class="add-column" matTooltip="add Text column" matTooltipPosition="above"
+        <button (click)="insertTextColumn()" class="add-column" matTooltip="add text column" matTooltipPosition="above"
             mat-icon-button aria-label="ranking">
             <mat-icon style="font-size: 26px;" class="full-icon">view_list</mat-icon>
-        </button>
-        <button (click)="insertRadioColumn()" class="add-column" matTooltip="add radio column"
-            matTooltipPosition="above" mat-icon-button aria-label="ranking">
-            <mat-icon style="font-size: 26px;" class="full-icon">radio_button_checked</mat-icon>
-        </button>
-        <button (click)="insertCommentBoxColumn()" class="add-column" matTooltip="add a Comment box column"
+        </button>   
+
+        <!-- <button (click)="insertRadioColumn()" class="add-column"  matTooltip="add radio column"
+        matTooltipPosition="above" mat-icon-button aria-label="ranking">
+        <mat-icon style="font-size: 26px;" class="full-icon">radio_button_checked</mat-icon>
+    </button> -->
+        <button (click)="insertCommentBoxColumn()" class="add-column" matTooltip="add comments column"
             matTooltipPosition="above" mat-icon-button aria-label="ranking">
             <mat-icon style="font-size: 26px;" class="full-icon">wysiwyg</mat-icon>
         </button>
@@ -77,7 +112,7 @@
             <mat-icon style="font-size: 26px;" class="full-icon">vertical_distribute</mat-icon>
         </button>
         <button (click)="editSingleTableCells = !editSingleTableCells"
-            [ngClass]="(!editSingleTableCells)?'add-column':'add-column-active'" matTooltip="edit tabel cells"
+            [ngClass]="(!editSingleTableCells)?'add-column':'add-column-active'" matTooltip="edit table cells"
             matTooltipPosition="above" mat-icon-button aria-label="ranking">
             <mat-icon style="font-size: 26px;" class="full-icon">explicit</mat-icon>
         </button>
@@ -101,6 +136,7 @@
     </div>
 </div>
 <!-- ➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗  END  ➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗ -->
+
 
 
 
@@ -236,11 +272,13 @@
             <div class="test-name-table" style="cursor: grab;">
 
                 <!--⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️ RANK RENDERER ⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️ -->
-                <div class="rank-column">
+                <div [ngClass]="(this.bmxItem.componentSettings[0].rankType == 'dragAndDrop')?'rank-column':
+                                (this.bmxItem.componentSettings[0].rankType == 'dropDown')?'rank-column1':'rank-column1'"
+                                [style.width]="bmxItem.componentSettings[0].rateWidth + 'px'">
                     <div *ngIf="(y !== 0)">
                         <!--☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️ DROP DOWN ☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️-->
                         <mat-form-field *ngIf="this.bmxItem.componentSettings[0].rankType == 'dropDown'"
-                            appearance="outline" style="width: 130px;padding-top: 13px;height: 80px;">
+                            appearance="outline" style="width: 110px;padding-top: 13px;height: 80px;">
                             <mat-label>Rank 1 to {{rankingScaleValue}}</mat-label>
                             <mat-select matNativeControl [(ngModel)]="bmxItem.componentText[y].RATE"
                                 (selectionChange)="setRating(bmxItem.componentText[y].RATE,y)">
@@ -290,11 +328,14 @@
 
                 <div *ngFor="let columnName of columnsNames; let e =  index"
                     style="display: flex;align-items: center;justify-content: center;" [ngClass]="(e%2==0)?'red':'blue'"
+                    [style.padding]="bmxItem.componentSettings[0].rowHeight"
                     [style.width]="(columnName == 'rationale')?bmxItem.componentSettings[0].rationalewidth + 'px': 
-                ( (columnName.includes('RadioColumn'))?bmxItem.componentSettings[0].radioColumnsWidth + 'px' :
-                bmxItem.componentSettings[0].columnWidth + 'px' )">
-                    <!-- (columnName == 'RadioColumn1)?bmxItem.componentSettings[0].radioColumnsWidth + 'px': 
-                bmxItem.componentSettings[0].columnWidth + 'px' -->
+                    (columnName == 'RATE')?bmxItem.componentSettings[0].rateWidth + 'px':
+                    (columnName == 'nameCandidates')?bmxItem.componentSettings[0].nameCandidatesWidth + 'px':
+                    (columnName.includes('Comments'))?bmxItem.componentSettings[0].commentsWidth + 'px':
+                    (columnName.includes('RadioColumn'))?bmxItem.componentSettings[0].radioColumnsWidth + 'px' :
+                    bmxItem.componentSettings[0].columnWidth + 'px'">
+
                     <!-- 🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢 HEADER TEXT AREA 🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢 -->
 
                     <div *ngIf="(y == 0)" class="header-title" (mouseenter)="selectedColumn = e"
@@ -331,25 +372,26 @@
                             (change)="saveRadioColumValue(columnName, y)">
 
 
-                        <!-- TEXT_AREA COLUMN-->
+                        <!-- TEXT_AREA COLUMN COMMENTS-->
                         <textarea *ngIf="y !== 0  && columnName.includes('Comments') == true"
-                            [style.width]="(bmxItem.componentSettings[0].columnWidth - 20) +'px'"
-                            [style.font-size]="bmxItem.componentSettings[0].fontSize +'px'" cdkTextareaAutosize
-                            [cdkAutosizeMinRows]="bmxItem.componentSettings[0].rowHeight"
-                            style="text-align: center;height: 32px;width: 358px;font-size: 16px;border: 1px solid #dddddd;"
-                            class="row-box" [(ngModel)]="testName[columnName]" rows="4" cols="50"></textarea>
+                        [style.width]="(bmxItem.componentSettings[0].commentsWidth - 20) +'px'"
+                        [style.font-size]="bmxItem.componentSettings[0].fontSize +'px'" cdkTextareaAutosize
+                        [cdkAutosizeMinRows]="bmxItem.componentSettings[0].rowHeight"
+                        style="text-align: center;height: 32px;width: 358px;font-size: 16px;border: 1px solid #dddddd;"
+                        class="row-box" [(ngModel)]="testName[columnName]"></textarea>
 
 
-                        <!-- TEXT AREA TO EDIT TABLE CELL CONTENT -->
-                        <textarea *ngIf="y !== 0  && editSingleTableCells && (columnName.includes('RadioColumn') != true) &&
-                              columnName.includes('Comments') != true &&  columnName.includes('RATE') != true"
-                            [style.width]="(columnName == 'rationale')?bmxItem.componentSettings[0].rationalewidth + 'px':bmxItem.componentSettings[0].columnWidth +'px'"
-                            [style.font-size]="bmxItem.componentSettings[0].fontSize +'px'" cdkTextareaAutosize
-                            [cdkAutosizeMinRows]="bmxItem.componentSettings[0].rowHeight"
-                            style="outline: none;text-align: center;" class="row-box"
-                            [(ngModel)]="testName[columnName]"></textarea>
+                       <!-- TEXT AREA TO EDIT TABLE CELL CONTENT -->
+                       <textarea *ngIf="y !== 0  && editSingleTableCells && (columnName.includes('RadioColumn') != true) &&
+                       columnName.includes('Comments') != true &&  columnName.includes('RATE') != true"
+                     [style.width]="(columnName == 'rationale')?(bmxItem.componentSettings[0].rationalewidth - 10) + 'px':(bmxItem.componentSettings[0].columnWidth -10) +'px'"
+                     [style.font-size]="bmxItem.componentSettings[0].fontSize +'px'" cdkTextareaAutosize
+                     [cdkAutosizeMinRows]="bmxItem.componentSettings[0].rowHeight"
+                     style="outline: none;text-align: center;margin: 0 10px;" class="row-box"
+                     [(ngModel)]="testName[columnName]"></textarea>
 
-                        <p *ngIf="y !== 0  && !editSingleTableCells && (columnName.includes('RadioColumn') != true) &&  columnName.includes('Comments') != true"
+                        <p *ngIf="y !== 0  && !editSingleTableCells && (columnName.includes('RadioColumn') != true) &&
+                          columnName.includes('Comments') != true &&  columnName.includes('RATE') != true"
                             [style.font-size]="bmxItem.componentSettings[0].fontSize +'px'"
                             [style.width]="(columnName == 'rationale')?bmxItem.componentSettings[0].rationalewidth + 'px':bmxItem.componentSettings[0].columnWidth +'px'"
                             style="text-align: center;margin: 0 0 0px;">{{testName[columnName]}}</p>
