--- a/src/app/bmx/bmx-creator/survey-creation-design/templates/rank-scale/rank-scale.component.scss
+++ b/src/app/bmx/bmx-creator/survey-creation-design/templates/rank-scale/rank-scale.component.scss
@@ -82,7 +82,7 @@
 }
 
 .rank-column {
-  min-width: 200px;
+  min-width: 80px;
   background-color: white;
   display: flex;
   align-items: center;
@@ -92,11 +92,23 @@
   border-top: rgb(231, 230, 230) 1px solid;
 }
 
+.rank-column1 {
+  min-width: 50px;
+  background-color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-left: rgb(231, 230, 230) 1px solid;
+  border-right: rgb(231, 230, 230) 1px solid;
+  border-top: rgb(231, 230, 230) 1px solid;
+}
+
+
 .red {
   background-color: white;
   border-right: rgb(231, 230, 230) 1px solid;
   border-top: rgb(231, 230, 230) 1px solid;
-  padding: 20px;
+  padding: 0px;
   // margin: 5px;
 }
 
@@ -105,7 +117,7 @@
   border-right: rgb(231, 230, 230) 1px solid;
   border-left: rgb(231, 230, 230) 1px solid;
   border-top: rgb(231, 230, 230) 1px solid;
-  padding: 20px;
+  padding: 0px;
   // margin: 5px;
 }
 
@@ -113,7 +125,7 @@
   background-color: white;
   border-right: rgb(230, 230, 230) 1px solid;
   border-top: rgb(231, 230, 230) 1px solid;
-  padding: 20px;
+  padding: 0px;
   // margin: 5px;
 }
 
@@ -265,9 +277,6 @@ textarea:placeholder-shown {
   background: none;
 }
 
-mat-form-field {
-  margin-right: 12px;
-}
 
 // INPUT RANGE STYLE
 
